--- a/_config.yml
+++ b/_config.yml
@@ -107,7 +107,7 @@ analytics:
 author:
   name: "Roujia Chen & Jiayi Zhao"
   avatar: # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio: "Master Students of Social Policy & Data Analytics, SP2 University of Pennsylvania"
+  bio: "Master students at SP2, University of Pennsylvania"
   location: "Philadelphia"
   email:
   links:
