--- a/_config.yml
+++ b/_config.yml
@@ -16,9 +16,9 @@ minimal_mistakes_skin: "default" # "air", "aqua", "contrast", "dark", "dirt", "n
 
 # Site Settings
 locale: "en-US"
-title: "MUSA 550: Geospatial Data Science in Python"
+title: "Water, Sanitation, and Hygiene (WASH) on Health - UNICEF Data"
 title_separator: "-"
-name: "Nick Hand"
+name: "Roujia & Jiayi"
 description: "Displaying cool data visualizations"
 url: # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl: # the subpath of your site, e.g. "/blog"
@@ -107,7 +107,7 @@ analytics:
 author:
   name: "Roujia Chen & Jiayi Zhao"
   avatar: # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio: "Master students at SP2, University of Pennsylvania"
+  bio: "MSSP+DA students at SP2, University of Pennsylvania"
   location: "Philadelphia"
   email:
   links:
