--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ minimal_mistakes_skin: "default" # "air", "aqua", "contrast", "dark", "dirt", "n
 
 # Site Settings
 locale: "en-US"
-title: "Water, Sanitation, and Hygiene (WASH) on Health - UNICEF Data"
+title: "Water, Sanitation, and Hygiene (WASH) & Health - UNICEF Data"
 title_separator: "-"
 name: "Roujia & Jiayi"
 description: "Displaying cool data visualizations"
